<?xml version="1.0"?>
<package format="2">
  <name>balance_msgs</name>
  <version>0.0.1</version>
  <description>Custom message definitions for balance_sw</description>
  <maintainer email="ayron@protonmail.com">Ayron Catteau</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend> 
  <build_depend>message_generation</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>std_msgs</exec_depend> 
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
