<?xml version="1.0"?>
<package format="2">
  <name>balance_sw</name>
  <version>0.0.1</version>
  <description>ROS Package for balance robot software</description>
  <maintainer email="ayron@protonmail.com">Ayron Catteau</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>balance_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>balance_msgs</build_export_depend>
 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>balance_msgs</exec_depend>

  <export>
  </export>
</package>
